--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="first">
-      <h1>The Beagle Blog</h1>
+      <h1>The Beagle Blog2</h1>
       <p>
         The beagle is a breed of small scent hound, similar in appearance to the
         much larger foxhound. The beagle was developed primarily for hunting
